# 11xai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  token.pickle
app/: agent.py  config.py  draft.py  gmail.py  main.py  output_parser.py  tools.py  utils.py
app/agent/: tools.py
app/integrations/: faiss.py  gcal.py  gmail.py  google_auth.py
app/integrations/bamboo/: employees.py  time_off.py  utils.py
app/prompts/: master.yaml
